# AwsIBox

./: .gitattributes  .gitignore  CONFIGURATIONS_PROCESSING.md  CONFIGURATIONS_PROCESSING_ORDER.md  IBOX_SPECIAL_KEYS.md  KEY_SPECIAL_SUFFIXES.md  MANIFEST.in  README.md  cfg  local_install_git_version  local_install_git_version.sh  pyproject.toml  requirements.txt  setup.cfg  setup.py
awsibox/: RP.py  __init__.py  apigateway.py  args.py  autoscaling.py  buckets.py  certificates.py  cfg.py  cfg_instance_types.py  cfn.py  cloudformation.py  cloudfront.py  cloudwatch.py  codedeploy.py  common.py  containers.py  crm.py  discover.py  dynamodb.py  ec2.py  ecr.py  ecs.py  efs.py  elasticache.py  elasticloadbalancing.py  events.py  generate.py  iam.py  joker.py  kms.py  lambdas.py  loadbalancing.py  logs.py  mapping.py  mappings.py  notification.py  override.py  queue.py  rds.py  replicator.py  (+10 more)
awsibox/cfg/BASE/: agw.yml  alarms.yml  asgnotificationr53.yml  cch.yml  (+78 more)
awsibox/lambdas/: ASGNotificationR53.code  ASGSpot.code  ASGTerminationPolicyECS.code  ASGTerminationPolicySpot.code  AtEdgeAddHeaders.code  AutoscalingTerminationPolicySpot.code  CCRAWSResource.code  CCRAWSResources.code  CCRFargateSpot.code  CCRLightHouse.code  CCRStackReplicator.code  CloudWatchAlarmStateChange.code  CloudWatchRepeatedNotify.code  EC2StartStopTagged.code  ECSClusterAutoscale.code  ECSDrainInstance.code  ECSDrainTasks.code  ECSEventTaskStateChange.code  ECSEventsSpot.code  ECSRaiseASGAlarm.code  ECSRebalance.code  ECSRunTask.code  ECSServiceAction.code  ECSUpdateDesiredCount.code  ElasticSearchSnapShot.code  InfraInfo.code  ManageService.code  PaidApi.code  PyPackager.code  Python37SSM.layer  R53RecordInstanceId.code  ServiceDiscovery.code  ServiceUnavailable.code  StacksOps.code
awsibox/mod/: autoscaling.py  cloudformation.py  cloudfront.py  ec2.py  ecr.py  efs.py  elasticloadbalancing.py  iam.py  joker.py  mappings.py  rds.py  s3.py  waf.py
awsibox/templates/: vpc.json
awsibox/user-data/: ecs-cluster.sh
sample-Ext/lib/: cfnExt.py
scripts/: ibox_build_templates.sh  ibox_generate_template.py  ibox_generate_templates.py
(+439 files in other folders)
