[egg_info]
egg_base = ./build/lib

[metadata]
name = awsibox
version = attr: awsibox.__version__
author = Mello
author_email = mello+python@ankot.org
description = AWS Infrastructure in a Box
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/mello7tre/AwsIBox
license = OSI Approved :: Open Software License 3.0 (OSL-3.0)
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Open Software License 3.0 (OSL-3.0)
    Operating System :: OS Independent
